Add Cors Config and add unit test